feat: added vscode folder

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -30,9 +30,7 @@
             "osx": {
                 "command": "yarn lint:fix"
             },
-            "problemMatcher": [
-                "$eslint-stylish"
-            ],
+            "problemMatcher": ["$eslint-stylish"],
             "options": {
                 "cwd": "${workspaceRoot}",
                 "statusbar": "hide"
