--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "start": "node -r ts-node/register/transpile-only index.ts",
+    "start:dev": "ts-node-dev --respawn --transpileOnly index.ts",
+    "lint": "eslint 'src/**'",
+    "lint:fix": "eslint --fix 'src/**'",
+    "pretty": "prettier --write 'src/**'"
+  },
   "author": "K V Adhityan",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "helmet": "^3.20.0",
     "routing-controllers": "^0.7.7",
     "typedi": "^0.8.0",
     "typeorm": "^0.2.18",
@@ -17,7 +27,11 @@
   "devDependencies": {
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
+    "@types/body-parser": "^1.17.0",
+    "@types/cookie-parser": "^1.4.1",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
+    "@types/helmet": "0.0.43",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "eslint": "^6.1.0",
