feat: got probot wired in

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-# ENV CONFIG
-NODE_ENV = development
-APP_HOST = 0.0.0.0
-APP_PORT = 9000
+# The ID of your GitHub App
+APP_ID=
+WEBHOOK_SECRET=development
 
-# twilio - AC5e69f1de5ba995bc539440c608677ff7
-TWILIO_ACCOUNT_SID = AC5e69f1de5ba995bc539440c608677ff7
-TWILIO_AUTH_TOKEN = 9aef696d523939f9b0847a397d809afd
-TWILIO_NUMBER = +13234981380
+# Use `trace` to get verbose logging or `info` to show less
+LOG_LEVEL=debug
+
+# Go to https://smee.io/new set this to the URL that you are redirected to.
+WEBHOOK_PROXY_URL=
