--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
-    "express": "^4.17.1",
     "helmet": "^3.20.0",
+    "probot": "^9.3.1",
     "routing-controllers": "^0.7.7",
     "typedi": "^0.8.0",
     "typeorm": "^0.2.18",
@@ -31,7 +31,6 @@
     "@types/body-parser": "^1.17.0",
     "@types/cookie-parser": "^1.4.1",
     "@types/dotenv": "^6.1.1",
-    "@types/express": "^4.17.0",
     "@types/helmet": "0.0.43",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
