--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start:dev": "ts-node-dev --respawn --transpileOnly index.ts",
     "lint": "eslint 'src/**'",
     "lint:fix": "eslint --fix 'src/**'",
-    "pretty": "prettier --write 'src/**'",
-    "tunnel": "lt --subdomain gamechange --port 7000 --print-requests"
+    "pretty": "prettier --write 'src/**'"
   },
   "author": "K V Adhityan",
   "license": "ISC",
@@ -41,8 +40,8 @@
     "eslint-plugin-import": "^2.18.2",
     "husky": "^3.0.3",
     "lint-staged": "^9.2.1",
-    "localtunnel": "^1.9.2",
     "prettier": "^1.18.2",
+    "smee-client": "^1.1.0",
     "ts-node-dev": "^1.0.0-pre.40",
     "typescript": "^3.5.3"
   }
